force-app/main/default/objects/Case/Case.object-meta.xml
<CustomObject>
    <fields>
        <fullName>SeverityLevel__c</fullName>
        <description>Custom severity level for complaints</description>
        <label>Severity Level</label>
        <length>50</length>
        <type>Text</type>
    </fields>
</CustomObject>