force-app/main/default/objects/Case/fields/Assigned_Agent__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Agent__c</fullName>
    <label>Assigned Agent</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Assigned_Cases</relationshipName>
    <relationshipLabel>Assigned Cases</relationshipLabel>
    <type>Lookup</type>
</CustomField>