force-app/main/default/objects/Case/fields/Case_Age_Hours__c.field-meta.xml
<CustomField>
    <fullName>Case_Age_Hours__c</fullName>
    <label>Case Age (Hours)</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>2</scale>
    <formula>IF(ISBLANK(ClosedDate), (NOW() - CreatedDate) * 24, (ClosedDate - CreatedDate) * 24)</formula>
    <formulaTreatBlanksAs>Zero</formulaTreatBlanksAs>
</CustomField>