force-app/main/default/objects/Case/fields/Escalation_Required__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Escalation Required</label>
    <type>Checkbox</type>
</CustomField>