force-app/main/default/objects/Case/fields/SLA_Status__c.field-meta.xml
<CustomField>
    <fullName>SLA_Status__c</fullName>
    <label>SLA Status</label>
    <type>Text</type>
    <length>40</length>
    <formula>CASE(TEXT(Priority),
    "Low", IF(Case_Age_Hours__c &lt;= 72, "Within SLA", IF(Case_Age_Hours__c &lt;= 86.4, "Approaching SLA", "SLA Breached")),
    "Medium", IF(Case_Age_Hours__c &lt;= 48, "Within SLA", IF(Case_Age_Hours__c &lt;= 57.6, "Approaching SLA", "SLA Breached")),
    "High", IF(Case_Age_Hours__c &lt;= 24, "Within SLA", IF(Case_Age_Hours__c &lt;= 28.8, "Approaching SLA", "SLA Breached")),
    "Critical", IF(Case_Age_Hours__c &lt;= 8, "Within SLA", IF(Case_Age_Hours__c &lt;= 9.6, "Approaching SLA", "SLA Breached")),
    "Within SLA")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
</CustomField>