force-app/main/default/objects/Case/fields/Subcategory__c.field-meta.xml
<CustomField>
    <fullName>Subcategory__c</fullName>
    <label>Subcategory</label>
    <type>Text</type>
    <length>80</length>
</CustomField>