force-app/main/default/objects/Case/fields/Suggested_Response__c.field-meta.xml
<CustomField>
    <fullName>Suggested_Response__c</fullName>
    <label>Suggested Response</label>
    <type>LongTextArea</type>
    <length>2000</length>
</CustomField>