force-app/main/default/objects/Case/validationRules/Case_Closed_Requires_Resolution.validationRule-meta.xml
<ValidationRule>
    <fullName>Case_Closed_Requires_Resolution</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Status, "Closed") &amp;&amp; ISBLANK(Resolution__c)</errorConditionFormula>
    <errorDisplayField>Resolution__c</errorDisplayField>
    <errorMessage>Closed cases must include a resolution before saving.</errorMessage>
</ValidationRule>