force-app/main/default/objects/Case/validationRules/Case_SuppliedEmail_Format.validationRule-meta.xml
<ValidationRule>
    <fullName>Case_SuppliedEmail_Format</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISBLANK(SuppliedEmail)) &amp;&amp; NOT(REGEX(SuppliedEmail, "^[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\\.[A-Za-z]{2,}$"))</errorConditionFormula>
    <errorDisplayField>SuppliedEmail</errorDisplayField>
    <errorMessage>Please enter a valid email address.</errorMessage>
</ValidationRule>