force-app/main/default/objects/Case/validationRules/Critical_Case_Requires_Assigned_Agent.validationRule-meta.xml
<ValidationRule>
    <fullName>Critical_Case_Requires_Assigned_Agent</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Priority, "Critical") &amp;&amp; ISBLANK(Assigned_Agent__c)</errorConditionFormula>
    <errorDisplayField>Assigned_Agent__c</errorDisplayField>
    <errorMessage>Critical cases must have an assigned agent.</errorMessage>
</ValidationRule>